--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       }
 
       try {
-        const response = await fetch('https://script.google.com/a/macros/sialarseguridad.com.ar/s/AKfycbx0_GhN1xP_KCh9vEqq0DXKdR2ZjrI58JhdS6qfgvIln-DoT3io3y6LGz2Wl7ZnCzMxvg/exec', {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbx0_GhN1xP_KCh9vEqq0DXKdR2ZjrI58JhdS6qfgvIln-DoT3io3y6LGz2Wl7ZnCzMxvg/exec', {
           method: 'POST',
           body: params
         });
