--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     }
 
     button {
-      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
       background-color: #b30000;
       color: white;
       border: none;
