--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
 
   <header>
-    <h1>Centro de Reclamos</h1>
+    <h1>SIALAR</h1>
   </header>
 
   <div class="container">
@@ -93,16 +93,13 @@
       <input type="text" id="barrio" name="barrio" required>
 
       <label for="telefono">Teléfono de contacto</label>
-      <input type="tel" id="telefono" name="telefono" required>
+      <input type="number" id="telefono" name="telefono" required>
 
       <label for="mail">Mail de contacto</label>
       <input type="email" id="mail" name="mail" required>
 
       <label for="reclamo">Reclamo</label>
       <textarea id="reclamo" name="reclamo" required></textarea>
-
-      <label for="imagen">Adjuntar imagen (no funcional en esta versión)</label>
-      <input type="file" id="imagen" name="imagen" accept="image/*" disabled>
 
       <button type="submit">Enviar Reclamo</button>
     </form>
