--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Formulario de Reclamos</title>
   <style>
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
     img {
       object-fit: cover;
     }
@@ -41,12 +47,18 @@
     input[type="text"],
     input[type="email"],
     input[type="tel"],
+    input[type=number],
     textarea {
       width: 100%;
       padding: 0.6rem;
       margin-top: 0.5rem;
       border: 1px solid #ccc;
       border-radius: 4px;
+    }
+
+    input[type=number] {
+      -moz-appearance: textfield;
+      appearance: inherit;
     }
 
     textarea {
@@ -91,7 +103,6 @@
       vertical-align:middle;
     }
 
-    
   </style>
 </head>
 <body>
